--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -10,7 +10,7 @@ body {
 .layout-container {
     display: flex;
     gap: 20px;
-    max-width: 1200px;
+    max-width: 1800px;
     width: 100%;
 }
 
@@ -62,15 +62,19 @@ h1 {
 button {
     background-color: #007bff;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 12px;
     width: 100%;
     margin-bottom: 10px;
 }
 
 button:hover {
     background-color: #0056b3;
+}
+
+.Transcription-button {
+    margin-bottom: 30px;
 }
